fixed bootstrap layout problem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1638,7 +1638,8 @@ input, select, textarea {
 		border: 0;
 		outline: 0;
 		cursor: pointer;
-		padding: 0 2.25em 0 2.25em;
+		margin: 7px;
+		padding: 1em 2.25em 0 2.25em;
 		font-size: 0.9em;
 		min-width: 12em;
 		height: 4em;
